--- a/SchoolApp/src/app/pending-leave/pending-leave.component.html
+++ b/SchoolApp/src/app/pending-leave/pending-leave.component.html
@@ -54,7 +54,7 @@
         <div class="row">
             <div class="col-md-3">
                 <fieldset class="form-group">
-                    <label for="file" class="bmd-label-floating">ATTACH FILE</label>
+                    <label for="file" class="bmd-label-floating">ATTACH THE FILE</label>
                     <input type="file" class="form-control" formControlName="file">
                 </fieldset>
             </div>
